# Perceptron

./: CMakeLists.txt  README.md
Header/: Algorithm.h  Button.h  CSVRow.h  Node.h  Perceptron.h  TextBox.h
Resources/: TestCase.cvs  TreningSet.cvs
Source/: Algorithm.cpp  CSVRow.cpp  Node.cpp  Perceptron.cpp  TextBox.cpp  main.cpp
